# shop-update-checker

./: Cargo.toml
src/: domain.rs  main.rs  service.rs  use_case.rs
src/domain/: shop.rs  shop_url.rs
src/infrastructure/: store.rs
src/infrastructure/fetch/: shop.rs
src/infrastructure/store/: shop_store.rs
src/service/: context.rs  cron.rs
src/use_case/: shop.rs
